Move the nav gradient to the globals.css file to try and resolve the issue of it not showing in the deployed app

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.nav-gradient {
+  background: linear-gradient(to bottom, #1e1c4a 65%, transparent 100%);
+}
